<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg_card" >

    <ImageView
        android:id="@+id/waste_details_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/pmd" />

    <TextView
        android:id="@+id/waste_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/waste_details_image"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/waste_details_image"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/waste_details_image"
        android:text="Restafval"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/waste_details_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/waste_details_image"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/waste_details_image"
        android:layout_marginTop="24dp"
        android:text="@string/collection_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/waste_details_collection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/waste_details_date_header"
        android:layout_below="@+id/waste_details_date_header"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/waste_details_image"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/waste_details_take_out_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/waste_details_date_header"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/waste_details_collection_date"
        android:layout_marginTop="16dp"
        android:text="@string/take_out_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/waste_details_collected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/waste_details_take_out_date_header"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/waste_details_take_out_date"
        android:layout_marginTop="50dp"
        android:text="@string/taken_out_question_mark" />

    <TextView
        android:id="@+id/waste_details_take_out_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/waste_details_take_out_date_header"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/waste_details_image"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
